# env

./: .gitattributes  .gitignore  Kconfig  README.md  README_ZH.md  SConscript  SConstruct  archive.py  env.json  env.ps1  env.py  env.sh  init_env.py  install_arch.sh  install_macos.sh  install_suse.sh  install_ubuntu.sh  install_windows.ps1  kconfig.py  main.c  menuconfig  menuconfig.ps1  package.py  pkgs  pkgs.ps1  pkgsdb.py  pyproject.toml  sdk  setup.py  statistics.py  touch_env.ps1  touch_env.sh  tox.ini  vars.py  version.py
.github/: action.yml
.github/workflows/: pylint.yml  tox.yml
cmds/: .config  Kconfig  __init__.py  cmd_menuconfig.py  cmd_package.py  cmd_package_list.py  cmd_package_printenv.py  cmd_package_update.py  cmd_package_upgrade.py  cmd_package_utils.py  cmd_package_wizard.py  cmd_sdk.py  cmd_system.py
cmds/cmd_package/: __init__.py  cmd_package_list.py  cmd_package_printenv.py  cmd_package_update.py  cmd_package_upgrade.py  cmd_package_utils.py  cmd_package_wizard.py
eagent/: __init__.py  cli.py  headless.py  paths.py  reload.py
eagent/commands/: __init__.py  registry.py
eagent/context/: __init__.py  agent_config.py  compaction.py  git_context.py  memory.py  post_compact.py  session_store.py  token_counting.py
eagent/core/: __init__.py  agent_loop.py  api_client.py  errors.py  streaming_executor.py  types.py
ebuild/: README.md  __init__.py  attach.py  config.py  exporter.py  groups.py  helpers.py  kconfig.py  options.py  packages.py  system.py  toolchain.py
tests/: test_env.py
tools/: install.ps1  install.sh  touch_env.py
(+65 files in other folders)
